# LibertyMind

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  quickstart.sh  requirements.txt  run_introspection.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: ARCHITECTURE.md  PROBLEM_ANALYSIS.md
examples/: basic_usage.py  multi_provider_examples.py
src/: __init__.py  cli.py
src/clients/: __init__.py  multi_provider.py
src/core/: __init__.py  constitutional_self_verify.py  freedom_unlocker.py  knowledge_boundary.py  liberty_mind.py  limitation_fixers.py  multi_pass_sampler.py  reward_shield.py  token_optimizer.py  truth_reward.py  verification_gate.py
src/integration/: __init__.py  deep_search.py  self_introspection.py
src/server/: __init__.py  proxy_server.py
tests/: __init__.py  test_core.py  test_liberty_mind.py  test_multi_provider.py  test_v42_modules.py
